# shepherd_v2_planning

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  00_requirements.rst  01_reorder.md  01_requirements_feasibility.rst  05_power_stage_shepherd_v1.py  09_dev_roadmap.rst  10_cfaed_ethernet_ports.ods  10_concept_hw_bb_pinout.rst  10_concept_testbed.rst  10_rf_measurements.ods  11_concept_hw_cape.rst  12_concept_hw_beagle_pinout.xlsx  12_concept_shepherd.rst  12_concept_shepherd_meeting_notes.rst  13_concept_hw_casing.rst  15_concept_sw_py.rst  16_concept_sw_pru.rst  17_concept_sw_web.rst  18_concept_sw_linux.rst  19_concept_hw_harvester.rst  2021_inventory.md  21_hw_design_cape.rst  24_evaluate_beaglebone_AI.rst  25_improve_sw_linux.rst  26_improve_sw_pru.rst  27_improve_sw_python.rst  28_improve_sw_vmServer.rst  29_improve_sw_performance.rst  31_hw_test_for_functionality.rst  32_virtual_source_regulator.rst  32_virtual_source_schemdraw.py  33_watchdog.rst  34_beaglebone_boot_pins.rst  35_timesync_pru_level.rst  36_timesync_adapt_to_network.rst  36b_timesync_network_with_ptp_switch.rst  36c_timesync_kernel_debug.md  (+37 more)
scratch/: CMakeLists.txt  check_for_batOk.py  datalib.rst  dev_log_sys_extractor.py  dev_log_sys_stats.py  git_cheatsheet.rst  loopMod.py  printf.c  pruBenchmark.txt  pruBenchmark_2023_10.md  run.sh  uDiv.py  virtualCapacitor.py
scratch/circularBufferProto/: prototype2.py  prototype3.py  prototype4.py
scratch/omap-image-builder-custom/: neslab-ubuntu-focal-console-v4.19-ti-armhf.conf  readme.md
scratch/pru_benchmarks/: analysis.py
scratch/pru_rpc_debugger/: remote.py
scratch/shepherd-pyupgrade/: .pre-commit-config.yaml  Pipfile  virtual_source_config.py
scratch/shepherd_dataview/: stat_viewer.py  viewer.py
scratch/shepherd_profiler/: profile_analysis.csv  profile_analysis_2022_02_24.xlsx  profile_analysis_emulator.xlsx  profile_analysis_harvester.ods  profile_description.rst  profile_dynamic_load.py  profile_frontend_measure.py  profile_frontend_plot.py  profile_frontend_stats.py
scratch/switch_darmstadt/: #darmstadt-one-switch.txt  v1_5min.sal  v2_5min.sal
scratch/vSourceSim/: Pipfile  calibration.py  calibration_default.py  main.py  vSource-FixedPointAnalysis.wxmx  virtsource.yml  virtual_source.py  virtual_source_data.py  virtual_source_defs.yml
scratch/vsrc_analysis/: bq_plot_900mA.py  bq_shepherd.py  capacitor_plot_charge.py  capacitor_plot_cyclic.py  capacitor_plot_dischrg.py  capacitor_plot_selfdis.py  capacitor_plot_selfdis_var_charge.py  capacitor_real.py  capacitor_shepherd.py  diode_plot.py  diode_shepherd.py  requirements.txt
scratch/vsrc_analysis/bq-characteristics/: OC, LED 400mA.analog.pickle  OC, LED 400mA.digital.pickle  OC, LED 400mA.sal  R100, LED 400mA.analog.pickle  R100, LED 400mA.digital.pickle  R100, LED 400mA.sal  R1k, LED 1100mA.analog.pickle  R1k, LED 1100mA.digital.pickle  R1k, LED 1100mA.sal  R1k, LED 400mA.analog.pickle  R1k, LED 400mA.digital.pickle  R1k, LED 400mA.sal  R1k, LED 700mA.analog.pickle  R1k, LED 700mA.digital.pickle  R1k, LED 700mA.sal  R1k, LED 900mA.analog.pickle  R1k, LED 900mA.digital.pickle  R1k, LED 900mA.sal  converter_saleae.py  readme.md  solar-iv-1100mA.cut_10s000_to_10s100.h5  solar-iv-1100mA.ivcurve.csv  solar-iv-1100mA.ivcurve.raw.csv  solar-iv-400mA.cut_10s000_to_10s100.h5  solar-iv-400mA.ivcurve.csv  solar-iv-400mA.ivcurve.raw.csv  solar-iv-900mA.cut_10s000_to_10s100.h5  solar-iv-900mA.ivcurve.csv  solar-iv-900mA.ivcurve.raw.csv
scratch/vsrc_analysis/bq-efficiency/: BQ25570_LUTs_buck.yaml  readme.md
scratch/vsrc_analysis_v2/: README.md  capacitor_shepherd.py  plot_bq_statistics.py  plot_capacitor.py  plot_ivcurves.py
scratch/vsrc_analysis_v2/bq_cap/: smu.py  (+10 more)
timesync/: Readme.md  analyze_logic_traces.py  pyproject.toml  setup.cfg  test_clock_correction_distribution.py
timesync/examples/: sync_1channel.py
(+940 files in other folders)
