[metadata]
name = sync_analysis
version = attr: sync_analysis.__version__
author = Ingmar Splitt
author_email = ingmar.splitt@tu-dresden.de
maintainer_email = ingmar.splitt@tu-dresden.de
license = MIT
url = testbed.nes-lab.org
project_urls =
    Tracker = https://github.com/orgua/shepherd/issues
    Source = https://github.com/orgua/shepherd
description = Collection of tools to analyze Sync-behavior, recorded with saleae logic pro
keywords = testbed, beaglebone, pru, logic pro
platforms = unix, linux
classifiers =
    # How mature is this project? Common values are
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
package_dir =
    =.
zip_safe = True
include_package_data = True
python_requires = >= 3.10
install_requires =
    click>=8.1.3
    numpy
    pandas
    chromalog

[options.extras_require]
dev =
    black
    pylint
    flake8
    twine
    pre-commit
    pyright
    ruff

test =
    pytest>7.4.0
    pytest-timeout
    pytest-click
    coverage


[options.entry_points]
console_scripts =
    sync-analysis = sync_analysis.cli:cli

[options.packages.find]
where=.

[options.package_data]

[aliases]
test=pytest

[tool:pytest]
addopts = -vvv --stepwise
# continue after fail: sudo pytest-3 --stepwise
